@@ -5,7 +5,7 @@ python:
  - "3.3"
 env:
   global:
-   - TEST_APPS=allauth account socialaccount amazon angellist bitbucket feedly foursquare dropbox facebook flickr google github hubic instagram linkedin linkedin_oauth2 mailru windowslive openid paypal persona soundcloud stackexchange tumblr twitch twitter vimeo vk weibo bitly xing
+   - TEST_APPS=allauth account socialaccount amazon angellist bitbucket feedly foursquare dropbox facebook flickr google github hubic instagram linkedin linkedin_oauth2 mailru windowslive openid orcid paypal persona soundcloud stackexchange tumblr twitch twitter vimeo vk weibo bitly xing
   matrix:
    - DJANGO=Django==1.4.3
    - DJANGO=Django==1.5
